RQ2/REQBench-ReadPyE/ReadPyE/3d-ken-burns/torchvision/0.11.1/installationresult.txt
Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple
Collecting torch==1.7.1
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/90/5d/095ddddc91c8a769a68c791c019c5793f9c4456a688ddd235d6670924ecb/torch-1.7.1-cp37-cp37m-manylinux1_x86_64.whl (776.8 MB)
Collecting opencv-python==4.6.0.66
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/af/bf/8d189a5c43460f6b5c8eb81ead8732e94b9f73ef8d9abba9e8f5a61a6531/opencv_python-4.6.0.66-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (60.9 MB)
Collecting gevent==0.12.2
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/f9/9d/34801e8a25656bbb02f4e7bf361ac8b69b5bdb08e1a3a758042085d587b6/gevent-0.12.2.tar.gz (206 kB)
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'error'
  error: subprocess-exited-with-error
  
  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [7 lines of output]
      Traceback (most recent call last):
        File "<string>", line 36, in <module>
        File "<pip-setuptools-caller>", line 34, in <module>
        File "/tmp/pip-install-3ii_7qph/gevent_cc75f30a0d334f2089c860b76300faa5/setup.py", line 81
          print 'Linking %s to %s' % (path_to_build_core_so, path_to_core_so)
                                 ^
      SyntaxError: invalid syntax
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
